--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,30 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="scripts.js"></script>
+  <script src="/socket.io/socket.io.js" defer></script>
+  <script src="scripts.js" defer></script>
   <title>Document</title>
 </head>
 
 <body>
-  <h1>Express Server is working</h1>
+  <div class="container text-center">
+    <form class="row" id="messages-form">
+      <div class="col-6">
+        <input type="text" placeholder="Enter message her" id="user-message" />
+      </div>
+      <div class="col-2">
+        <input type="submit" value="Send Msg!" class="btn btn-primary">
+      </div>
+    </form>
+    <div class="col-12">
+      <ul id="messages">
+        <!-- Starts empty, populated by Socket.io and JavaScript -->
+      </ul>
+    </div>
+  </div>
 </body>
 
 </html>
